--- a/.hintrc
+++ b/.hintrc
@@ -3,11 +3,17 @@
     "development"
   ],
   "hints": {
-    "no-inline-styles": "off",
     "axe/text-alternatives": [
       "default",
       {
         "image-alt": "off"
+      }
+    ],
+    "no-inline-styles": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
       }
     ]
   }
